- backgroud - http request für Wakeup Unraid - blur

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,6 @@ android.useAndroidX=true
 
 # Enable LeakCanary
 leakcanary.enable=false
+
+# Release Version
+jellyfin.version=0.17.7-ebeier-dev.1
